<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PxTestApp</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="product_selection_text">Product selection</string>
    <string name="product_selection_prompt">Select a product</string>

    <string-array name="products_array">
        <item>Simple A+B</item>
        <item>N1</item>
        <item>M1</item>
        <item>Mini coverage</item>
        <item>UK Pension Product</item>
        <item>Other Products</item>
    </string-array>
        
    <string name="native_pss_label">Native Pss</string>
    <string name="native_private_dirty_label">Native Private Dirty</string>
    <string name="dalvik_pss_label">Dalvik Pss</string>
    <string name="dalvik_private_dirty_label">Dalvik Private Dirty</string>
    <string name="calculation_time_label">Total calculation time:</string>
    <string name="calculation_min_time_label">Minimum calculation time:</string>
    <string name="calculation_max_time_label">Maximum calculation time:</string>
    <string name="calculation_nbrequests_label">Number of requests:</string>
    <string name="package_load_time_label">Package load time:</string>
    <string name="memory_statistics_label">Memory data</string>
    <string name="memory_start_label">Start</string>
    <string name="memory_deplload_label">After Load</string>
    <string name="memory_calc_label">After Calc</string>
    <string name="memory_end_label">End</string>
    <string name="calc_statistics_label">Calculation data</string>
    <string name="idle_label">Idle</string>
    
</resources>
