<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#0099cc"
    android:orientation="vertical"
    style="?buttonBarStyle"
    tools:context=".PxActivity" >

   <TextView
       android:id="@+id/product_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="20dp"
       android:paddingBottom="10dp"
       android:text="" />

   <Spinner
       android:id="@+id/product_selection"
       android:layout_width="166dp"
       android:layout_height="50dp"
       android:contentDescription="@string/product_selection_text"
       android:entries="@array/products_array"
       android:prompt="@string/product_selection_prompt" />
   
   <GridLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_gravity="fill"
       android:layout_weight="1"
       android:columnCount="5" >

       <TextView
           android:id="@+id/memory_statistics_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="0"
           android:paddingTop="20dp"
           android:paddingBottom="10dp"
           android:text="@string/memory_statistics_label" />
       
       <TextView
           android:id="@+id/memory_start_label"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="0"
           android:paddingLeft="10dp"
           android:paddingTop="20dp"
           android:paddingBottom="10dp"
           android:text="@string/memory_start_label" />
       
       <TextView
           android:id="@+id/memory_deplload_label"
           android:layout_column="2"
           android:layout_gravity="top|left"
           android:layout_row="0"
           android:paddingLeft="10dp"
           android:paddingTop="20dp"
           android:paddingBottom="10dp"
           android:text="@string/memory_deplload_label" />
       
       <TextView
           android:id="@+id/memory_calc_label"
           android:layout_column="3"
           android:layout_gravity="top|left"
           android:layout_row="0"
           android:paddingLeft="10dp"
           android:paddingTop="20dp"
           android:paddingBottom="10dp"
           android:text="@string/memory_calc_label" />
       
       <TextView
           android:id="@+id/memory_end_label"
           android:layout_column="4"
           android:layout_gravity="top|left"
           android:layout_row="0"
           android:paddingLeft="10dp"
           android:paddingTop="20dp"
           android:paddingBottom="10dp"
           android:text="@string/memory_end_label" />
       
       <TextView
           android:id="@+id/native_pss_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="1"
           android:text="@string/native_pss_label" />
       
       <TextView
           android:id="@+id/native_pss_start_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="1"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/native_pss_deplload_value"
           android:layout_column="2"
           android:layout_gravity="top|left"
           android:layout_row="1"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/native_pss_calc_value"
           android:layout_column="3"
           android:layout_gravity="top|left"
           android:layout_row="1"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/native_pss_end_value"
           android:layout_column="4"
           android:layout_gravity="top|left"
           android:layout_row="1"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/native_npd_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="2"
           android:text="@string/native_private_dirty_label" />
       
       <TextView
           android:id="@+id/native_npd_start_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="2"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/native_npd_deplload_value"
           android:layout_column="2"
           android:layout_gravity="top|left"
           android:layout_row="2"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/native_npd_calc_value"
           android:layout_column="3"
           android:layout_gravity="top|left"
           android:layout_row="2"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/native_npd_end_value"
           android:layout_column="4"
           android:layout_gravity="top|left"
           android:layout_row="2"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_pss_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="3"
           android:text="@string/dalvik_pss_label" />
       
       <TextView
           android:id="@+id/dalvik_pss_start_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="3"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_pss_deplload_value"
           android:layout_column="2"
           android:layout_gravity="top|left"
           android:layout_row="3"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_pss_calc_value"
           android:layout_column="3"
           android:layout_gravity="top|left"
           android:layout_row="3"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_pss_end_value"
           android:layout_column="4"
           android:layout_gravity="top|left"
           android:layout_row="3"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_npd_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="4"
           android:text="@string/dalvik_private_dirty_label" />
       
       <TextView
           android:id="@+id/dalvik_npd_start_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="4"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_npd_deplload_value"
           android:layout_column="2"
           android:layout_gravity="top|left"
           android:layout_row="4"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_npd_calc_value"
           android:layout_column="3"
           android:layout_gravity="top|left"
           android:layout_row="4"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/dalvik_npd_end_value"
           android:layout_column="4"
           android:layout_gravity="top|left"
           android:layout_row="4"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/calc_statistics_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="5"
           android:paddingTop="20dp"
           android:paddingBottom="10dp"
           android:text="@string/calc_statistics_label" />
       
       <TextView
           android:id="@+id/package_load_time_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="6"
           android:text="@string/package_load_time_label" />
       
       <TextView
           android:id="@+id/package_load_time_for_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="6"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/calculation_time_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="7"
           android:text="@string/calculation_time_label" />
       
       <TextView
           android:id="@+id/calculation_time_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="7"
           android:paddingLeft="10dp"
           android:text="" />


       <TextView
           android:id="@+id/calculation_min_time_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="8"
           android:text="@string/calculation_min_time_label" />
       
       <TextView
           android:id="@+id/calculation_min_time_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="8"
           android:paddingLeft="10dp"
           android:text="" />

       <TextView
           android:id="@+id/calculation_max_time_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="9"
           android:text="@string/calculation_max_time_label" />
       
       <TextView
           android:id="@+id/calculation_max_time_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="9"
           android:paddingLeft="10dp"
           android:text="" />
       
       <TextView
           android:id="@+id/calculation_nbrequests_label"
           android:layout_column="0"
           android:layout_gravity="top|left"
           android:layout_row="10"
           android:text="@string/calculation_nbrequests_label" />
       
       <TextView
           android:id="@+id/calculation_nbrequests_value"
           android:layout_column="1"
           android:layout_gravity="top|left"
           android:layout_row="10"
           android:paddingLeft="10dp"
           android:text="" />
       
   </GridLayout>
       
   <TextView
       android:id="@+id/status_message"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/idle_label" />
   
   <Button
       android:id="@+id/calculate_button"
       style="?buttonBarButtonStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="bottom|center_horizontal"
       android:onClick="onCalculate"
       android:text="@string/calculate_button_text" />

</LinearLayout>
